# goldcut

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  promote.sh  pyproject.toml  schema.sql
deploy/: goldcut-bot.service
docs/: PRODUCT_DESIGN.md  analyzer-method.md
docs/decisions/: 0001-fetch-via-mac-over-tailscale.md  0002-full-download-server-cut.md
src/goldcut/: __init__.py  config.py  models.py  transcript.py
src/goldcut/accounts/: __init__.py
src/goldcut/analyzer/: __init__.py  segmenter.py
src/goldcut/api/: app.py  auth.py
src/goldcut/billing/: __init__.py
src/goldcut/bot/: __init__.py  agent.py  main.py
src/goldcut/curator/: __init__.py  agent.py
src/goldcut/cutter/: __init__.py
src/goldcut/delivery/: __init__.py
src/goldcut/eval/: __init__.py  __main__.py  golden.json
src/goldcut/fetcher/: __init__.py  client.py  local.py  worker.py
src/goldcut/nlu/: __init__.py
src/goldcut/publisher/: __init__.py
src/goldcut/retrieval/: __init__.py
src/goldcut/store/: __init__.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  api.ts  main.tsx  styles.css  telegram.ts
