[project]
name = "goldcut"
version = "0.0.1"
description = "Выуживание «золота» из длинных видео в короткие клипы для TikTok"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2025.1.0",      # добыча (на Mac-воркере)
    "anthropic>=0.40.0",     # LLM-анализ (Claude)
    "httpx>=0.27",           # fetcher.client -> воркер по tailnet
    "fastapi>=0.110",        # fetcher.worker на Mac
    "uvicorn>=0.30",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goldcut"]

[tool.ruff]
line-length = 100
target-version = "py312"
