[project]
name = "goldcut"
version = "0.0.1"
description = "Выуживание «золота» из длинных видео в короткие клипы для TikTok"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",     # LLM-анализ (Claude)
    "pydantic>=2.0",         # модели + structured output
    "httpx>=0.27",           # fetcher.client -> воркер по tailnet
    "python-telegram-bot>=21.0",
]
# Воркер на Mac — чистый stdlib (без pip/brew): yt-dlp там standalone-бинарь,
# HTTP — http.server. См. src/goldcut/fetcher/worker.py и ADR 0002.

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goldcut"]

[tool.ruff]
line-length = 100
target-version = "py312"
